initial iml python conversion + iiml grammar